# SDL-3DVisuPIP

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
src/: CMakeLists.txt  main.cc  main.cpp  main.hpp  utils.cpp  utils.hh  utils.hpp
src/eigen/: CMakeLists.txt
src/imgui/: CMakeLists.txt
src/pipeline/: CMakeLists.txt  pipeline.cpp  pipeline.hh  pipeline.hpp
src/pipeline/camera/: CMakeLists.txt  camera.cpp  camera.hpp
src/pipeline/modelling/: geometry.hh  gobject.hh  transformation.hh  wireframe.hh
src/pipeline/sru/: sru.cc
src/poly/: CMakeLists.txt  poly.cpp  poly.hpp
src/poly/transformation/: CMakeLists.txt  transformation.cpp  transformation.hpp
src/scene/: CMakeLists.txt  scene.cpp  scene.hpp
src/scene/camera/: camera.cpp  camera.hpp
src/scene/wireframe/: CMakeLists.txt  wireframe.cpp  wireframe.hpp
src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
src/view/: CMakeLists.txt  canvas.hh  drawing.hh  scene.hh  view.cpp  view.hh  view.hpp
src/view/canvas/: CMakeLists.txt  canvas.cpp  canvas.hpp
src/view/primitives/: CMakeLists.txt  primitives.cpp  primitives.hpp
src/view/viewport/: CMakeLists.txt  viewport.cpp  viewport.hpp
